@@ -24,6 +24,7 @@ Improved Debugging:
 -Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
 -Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
 -Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
+-Allow to define up to 100 breakpoints from menu
 
 Improved ZX Vision menu interface:
 -Added setting to pause cpu emulation on menu when multitask active
